--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,6 +18,8 @@ sites:
     url: https://status.xyqra.com
   - name: Mail
     url: $MAILSERVER
+  - name: Catbox
+    url: https://catbox.moe
 
 assignees: # Users to assign downtime issues (optional)
   - Xyqra
